2743 [Worker]               improved child process priority handling
2742 [Main]                 improved OS detection
2741 [MediaInfo]            fixed chapter detection
                            prevent MediaInfo from locking the GUI
2740 [OneClick]             disable controls while input detection is ongoing
2739 [MediaInfo]            removed the external dependency to MediaInfoWrapper.dll
2738 [OneClick]             fixed detection of audio track names
2737 [Muxer] + [OneClick]   removed unnecessary "X" buttons
2736 [Update]               x64: fixed detection of the DGIndexIM package 
2735 [MP4 Muxer]            write always aspect ratio information to preserve anamorphic information. Bug #837
2734 [Profile]              removed redundant second warning when changing a profile which should be saved to the scratchpad. Feature request #606
2733 [OneClick]             added button to clear the working directory path and the chapters file
     [AVS Script Creator]   added button to clear the subtitle file
     [Muxer]                added button to clear the chapter file
2732 [OneClick]             fixed OneClick startup error (regression of 2631)
2731 [OneClick]             added aspect ratio selection to the OneClick profile
                            input aspect ratio can always be selected
                            if an input aspect ratio will be selected this will be forced
                            the aspect ratio will not be forced by the muxer if the video track has been encoded
                            cosmetics
2730 [AutoEncode]           do not force the aspect ratio to be written by the muxer as it is available in the video stream
2729 [Muxer]                added/improved aspect ratio writing (all muxers except the AVI muxer)
                            for the M2TS muxer only some input video types are supported
                            improved logging
2728 [VideoEncoder]         forced aspect ratio to be written to the encoding