@@ -1,3 +1,4 @@
+2744 [Worker]               improved child process priority handling. part II
 2743 [Worker]               improved child process priority handling
 2742 [Main]                 improved OS detection
 2741 [MediaInfo]            fixed chapter detection
